# zephyr

./: CMakeLists.txt  MAINTAINERS.yml  west.yml
arch/posix/: CMakeLists.txt
arch/posix/core/: Makefile  posix_arch.c  posix_core.c
boards/arm64/qemu_cortex_a53/: board.cmake
boards/posix/native_posix/: CMakeLists.txt  cmdline.c  cmdline_common.c  hw_models_top.c  macho_init.cpp  main.c  native_posix.dts  timer_model.c  tracing.c
boards/posix/native_sim/: native_sim.dts
boards/riscv/icev_wireless/: icev_wireless.dts
boards/st/nucleo_g071rb/: nucleo_g071rb.dts
boards/st/nucleo_l496zg/: nucleo_l496zg.dts
boards/x86/ehl_crb/: ehl_crb.dts
boards/x86/qemu_x86/: qemu_x86.dts
boards/x86/rpl_crb/: rpl_crb.dts
cmake/linker/ld/: target.cmake  target_base.cmake
cmake/linker/lld/: target.cmake
cmake/modules/: extensions.cmake
doc/kernel/services/: signals.rst
doc/releases/: migration-guide-3.7.rst  release-notes-3.7.rst
drivers/console/: native_posix_console.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.edu  dma_edu.c
drivers/entropy/: fake_entropy_native_posix.c
drivers/firmware/: CMakeLists.txt  Kconfig
drivers/firmware/rpmi/: CMakeLists.txt  Kconfig  librpmi_internal.h  librpmi_internal_list.h  rpmi_context.c  rpmi_hsm.c  rpmi_service_group_clock.c  rpmi_service_group_cppc.c  rpmi_service_group_hsm.c  rpmi_service_group_sysreset.c  rpmi_service_group_syssusp.c  rpmi_shmem.c  rpmi_transport.c  rpmi_transport_shmem.c
drivers/firmware/scmi/: Kconfig
drivers/flash/: CMakeLists.txt  flash_handlers.c  spi_nor.c  spi_nor.h
drivers/fpga/: Kconfig.ice40  fpga_ice40.c
drivers/gpio/: gpio_pca_series.c
drivers/modem/: Kconfig
drivers/spi/: spi_esp32_spim.c
drivers/timer/: sys_clock_init.c
dts/bindings/dma/: zephyr,dma-edu.yaml
dts/bindings/firmware/: riscv,rpmi.yaml
dts/bindings/fpga/: lattice,ice40-fpga.yaml
dts/bindings/mtd/: jedec,spi-nor.yaml
include/: device.h  kernel.h
include/sys/: thread_stack.h
include/toolchain/: gcc.h
include/zephyr/: device.h  init.h  irq.h  kernel.h  kernel_structs.h  spinlock.h  sys_clock.h
include/zephyr/bluetooth/: gatt.h
include/zephyr/drivers/: gpio.h  rtc.h
include/zephyr/fs/: fs.h  fs_interface.h  fs_sys.h
include/zephyr/kernel/: thread.h
include/zephyr/llext/: llext.h
include/zephyr/net/: socket.h  socket_select.h  socket_service.h
include/zephyr/posix/: dirent.h  fcntl.h  mqueue.h  posix_features.h  posix_types.h  pthread.h  sched.h  semaphore.h  signal.h  spawn.h  time.h  unistd.h
include/zephyr/sys/: arch_interface.h  fdtable.h  iterable_sections.h  ring_buffer.h  timespec_util.h  timeutil.h
include/zephyr/toolchain/: gcc.h  llvm.h
include/zephyr/tracing/: tracing.h
kernel/: CMakeLists.txt  Kconfig  Kconfig.signal  device.c  dynamic.c  fatal.c  init.c  mutex.c  obj_dyn.c  rtsig.c  sched.c  signal.c  thread.c  thread_pool.c  userspace.c
lib/: CMakeLists.txt
lib/libc/: Kconfig
lib/libc/common/: CMakeLists.txt  Kconfig  Kconfig.mallinfo
lib/libc/minimal/: CMakeLists.txt  Kconfig
lib/libc/newlib/: libc-hooks.c
lib/libc/picolibc/: CMakeLists.txt
lib/os/: CMakeLists.txt  cbprintf_packaged.c  fdtable.c  printk.c  timespec.c
lib/os/zvfs/: Kconfig  zvfs_eventfd.c  zvfs_select.c
lib/posix/: CMakeLists.txt  Kconfig  Kconfig.clock  Kconfig.eventfd  Kconfig.feature  Kconfig.fnmatch  Kconfig.fs  Kconfig.mqueue  Kconfig.signal  Kconfig.template.pooled_ipc_type  Kconfig.template.pooled_type  Kconfig.uname  clock.c  mqueue.c  posix_clock.h  posix_internal.h  pthread.c  signal.c  sleep.c
lib/posix/conformance/: Kconfig
lib/posix/getopt/: Kconfig
lib/posix/options/: CMakeLists.txt  Kconfig  Kconfig.c_lib_ext  Kconfig.compat  Kconfig.deprecated  Kconfig.device_io  Kconfig.fd_mgmt  Kconfig.file_locking  Kconfig.fs  Kconfig.mem  Kconfig.net  Kconfig.pipe  Kconfig.procN  Kconfig.profile  Kconfig.pthread  Kconfig.rwlock  Kconfig.signal  Kconfig.spinlock  Kconfig.system_database  Kconfig.timer  Kconfig.toolchain  Kconfig.xsi  Kconfig.xsi_advanced_realtime  Kconfig.xsi_realtime_threads  barrier.c  clock.c  clock_selection.c  cond.c  device_io.c  env.c  fadvise.c  fallocate.c  fd_mgmt.c  file_locking.c  fs.c  fs_priv.h  getopt.c  madvise.c  memalign.c  mmap.c  (+20 more)
lib/posix/shell/: CMakeLists.txt
lib/utils/: json.c
modules/hostap/: Kconfig
modules/thrift/: CMakeLists.txt  Kconfig
modules/thrift/cmake/: thrift.cmake
modules/thrift/include/: zlib.h
modules/thrift/muzic/: defl_static.c  genlz77.c  inflater.c  zlib_comp.c
samples/drivers/fpga/fpga_controller/: CMakeLists.txt  prj_shell.conf
samples/drivers/fpga/fpga_controller/boards/: icev_wireless.conf
samples/drivers/fpga/fpga_controller/src/: icev_main.c
samples/hello_world/: CMakeLists.txt  prj.conf
samples/hello_world/boards/: nucleo_g071rb.conf  nucleo_g071rb.overlay  (+1 more)
samples/posix/custom_option_group/: CMakeLists.txt  Kconfig  README.rst  custom.conf  prj.conf  sample.yaml
samples/posix/custom_option_group/src/: custom_pipe.c  main.c
samples/spi_flash_programmer/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yml
samples/spi_flash_programmer/boards/: nucleo_g071rb.overlay
samples/spi_flash_programmer/dts/bindings/: zephyr,spi-flash-programmer.yaml
samples/spi_flash_programmer/include/zephyr/drivers/: sfp.h
samples/spi_flash_programmer/include/zephyr/sys/: si.h
samples/spi_flash_programmer/src/: main.c  sfp.c  sfp_shell.c  sfp_shell.h
scripts/: gen_handles.py  gen_offset_header.py
scripts/schemas/: patch-schema.yml
scripts/utils/: migrate_posix_kconfigs.py
subsys/fs/: fat_fs.c  fs.c
subsys/llext/: llext.c
subsys/logging/: log_core.c
subsys/net/lib/http/: CMakeLists.txt  Kconfig  http_client.c  http_hpack.c  http_log.c  http_log.h  http_server.c
subsys/net/lib/http/headers/: server_functions.h
subsys/net/lib/http/server/: Kconfig
subsys/net/lib/http/server/phd/: CMakeLists.txt  Kconfig  phd.cpp
tests/lib/thrift/muzic/: CMakeLists.txt  prj.conf  testcase.yaml
tests/lib/thrift/muzic/src/: main.c
(+250 files in other folders)
